--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -129,3 +129,11 @@ main {
     font-size: 14px;
     width: 80px;
 }
+.logout-btn {
+    border: 1px solid #1E90FF;
+    border-radius: 5px;
+    background-color: #1E90FF;
+    color: white;
+    font-size: 14px;
+    width: 80px;
+}
