--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -129,6 +129,7 @@ main {
     font-size: 14px;
     width: 80px;
 }
+/* Logout */
 .logout-btn {
     border: 1px solid #1E90FF;
     border-radius: 5px;
@@ -138,6 +139,68 @@ main {
     font-size: 12px;
     width: 80px;
 }
+
+/* Registration */
+.register {
+    margin: 0 auto;
+    width: 400px;
+    height: 300px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+}
+.register-bar {
+    position: relative;
+    margin-bottom: 10px;
+    background: #1E90FF;
+    border-radius: 5px 5px 0px 0px;
+    height: 60px;
+}
+.register-box-text {
+    color: #FFFFFF;
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%,-50%);
+    font-size: 20px;
+    text-align: center;
+}
+.register-container {
+    padding: 10px 40px;
+}
+.register-input-box {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 100%;
+}
+.register-icon {
+    position: absolute;
+    color: #808080;
+    top: 5px;
+    left: 0px;
+    padding: 9px 8px;
+}
+.register-input-box-right {
+    padding-top: 10px;
+    padding-right: 34px;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    text-align: right;
+}
+.register-btn {
+    border: 1px solid #1E90FF;
+    border-radius: 5px;
+    background-color: #1E90FF;
+    color: white;
+    font-size: 14px;
+    width: 60px;
+}
+
+/* Alert */
 .alert {
     position: relative;
     padding: 0.75rem 1.25rem;
