--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -129,6 +129,7 @@ main {
     font-size: 14px;
     width: 80px;
 }
+
 /* Logout */
 .logout-btn {
     border: 1px solid #1E90FF;
@@ -198,6 +199,41 @@ main {
     color: white;
     font-size: 14px;
     width: 60px;
+}
+
+/* Thanks */
+.thanks {
+    position: relative;
+    margin: 0 auto;
+    width: 400px;
+    height: 300px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+}
+.thanks-txt {
+    padding: 100px 0;
+    text-align: center;
+    font-size: 24px;
+    margin: 0 auto;
+    display: -webkit-flex;
+    -webkit-align-items: center;
+    -webkit-justify-content: center;
+}
+.thanks-input-box {
+    margin: auto;
+    position: absolute;
+    left: 50%;
+    top: 65%;
+    transform: translate(-50%, -50%);
+}
+.thanks-btn {
+    border: 1px solid #1E90FF;
+    border-radius: 5px;
+    background-color: #1E90FF;
+    color: white;
+    font-size: 14px;
+    width: 100px;
 }
 
 /* Alert */
