--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -145,7 +145,7 @@ main {
 .register {
     margin: 0 auto;
     width: 400px;
-    height: 300px;
+    height: 320px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
@@ -266,7 +266,16 @@ main {
     color: #4c110f;
 }
 
-
+.error-container {
+    margin: 0 auto;
+    width: 400px;
+    height: 50px;
+}
+.error {
+    text-align: left;
+    color: red;
+    font-size: 12px;
+}
 .space {
     margin-top: 20px;
 }
