--- a/src/public/css/restaurant.css
+++ b/src/public/css/restaurant.css
@@ -6,6 +6,12 @@ input {
     width : 250px;
     border: none;
 }
+button {
+    border: none;
+    outline: none;
+    background-color: #fff;
+    padding: 0;
+}
 
 /* Header search */
 .search-bar {
@@ -143,9 +149,8 @@ input {
     justify-content: space-between;
 }
 .card:not(:nth-child(4n+4)) {
-    margin-right: 1%;
+    margin-right: 1.2%;
 }
-
 .card:nth-child(n+5) {
     margin-top: 30px;
 }
