--- a/src/public/css/restaurant.css
+++ b/src/public/css/restaurant.css
@@ -211,6 +211,8 @@ input {
     font-size: 34px;
     line-height: 46px;
 }
+
+/* Restaurrant detail */
 .back-box {
     position: relative;
     height: 30px;
@@ -244,13 +246,8 @@ input {
 .detail-card {
     width: 100%;
     background-color: #fff;
-    /* display: flex;
-    flex-wrap: wrap; */
     margin-top: 40px;
-    /* margin-bottom: 20px; */
     overflow: hidden;
-    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
-    /* border-radius: 5px */
 }
 .detail-card-thumbnail {
     margin: 0;
