--- a/src/public/css/restaurant.css
+++ b/src/public/css/restaurant.css
@@ -158,13 +158,21 @@ input {
     font-size: 36px;
     color: red;
 }
-
 .favorite:hover{
+    transform: translateY(-3px);
+    cursor: pointer;
+}
+.favorited:hover{
     transform: translateY(-3px);
     cursor: pointer;
 }
 
 /* Detail container*/
+.main-detail {
+    width: 100%;
+    margin: 0 0 200px;
+    background: #FFFFFF;
+}
 .parent-container {
     display: flex;
     justify-content: space-between;
@@ -237,18 +245,24 @@ input {
     position: absolute;
     top: 50%;
     left: 50%;
+    border: none;
     transform: translateY(-50%) translateX(-50%);
     color: #808080;
+    background-color: #fff;
+}
+.arrow-back-icon:hover{
+    cursor: pointer;
 }
 .back-title {
     color: #000;
     margin-left: 20px;
     font-size: 26px;
     line-height: 30px;
+    white-space: nowrap
 }
 .back-container {
     margin: 40px 0px;
-    width: 20%;
+    width: 100%;
     display: flex;
     justify-content: flex-start;
 }
@@ -286,19 +300,18 @@ input {
 
 /* Reserve */
 .reserve-box {
-    height: 100%;
+    height: 70%;
     width: 100%;
     display: inline-block;
     box-sizing: border-box;
     background-color: #1E90FF;
-    border: 1px solid #1E90FF;
     border-radius: 5px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .reserve-container {
     margin: 30px;
-    /* border: 1px solid #fff; */
-    height: 90%;
+    height: 86%;
+    border: none;
 }
 .reserve-title {
     color: #fff;
@@ -320,7 +333,7 @@ input {
 }
 .reserve-btn {
     background-color: #0F66CD;
-    height: 5%;
+    height: 10%;
     border-radius: 0px 0px 5px 5px;
     display: flex;
     justify-content: center;
