create reserve func

--- a/src/public/css/restaurant.css
+++ b/src/public/css/restaurant.css
@@ -369,6 +369,7 @@ input {
 }
 .reserve-btn-txt {
     color: #fff;
+    background-color: #0F66CD;
     font-size: 26px;
     text-align: center;
 }
