--- a/src/public/css/restaurant.css
+++ b/src/public/css/restaurant.css
@@ -177,7 +177,7 @@ input {
     display: flex;
     justify-content: space-between;
     gap: 0px 80px;
-    height: 150vh;
+    height: 120vh;
 }
 .child-container {
     height: 100%;
@@ -299,6 +299,9 @@ input {
 }
 
 /* Reserve */
+.reserve-form {
+    height: 100%;
+}
 .reserve-box {
     height: 70%;
     width: 100%;
@@ -309,8 +312,9 @@ input {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .reserve-container {
-    margin: 30px;
-    height: 86%;
+    /* margin: 50px; */
+    padding: 50px;
+    height: 90%;
     border: none;
 }
 .reserve-title {
@@ -327,7 +331,7 @@ input {
 }
 .reserve-info {
     margin-top: 40px;
-    height: 30%;
+    height: 40%;
     background-color: #3676C0;
     border-radius: 5px;
     display: flex;
@@ -363,6 +367,31 @@ input {
     background-color: #0F66CD;
     height: 10%;
     border-radius: 0px 0px 5px 5px;
+    position: relative;
+    text-align: center;
+    border-radius: 30px;
+}
+.reserve-btn-txt {
+    background-color: #0F66CD;
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    line-height: 50px;
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 0px 0px 5px 5px;
+}
+.reserve-btn-txt:hover {
+    cursor: pointer;
+}
+/* .reserve-btn {
+    background-color: #0F66CD;
+    height: 10%;
+    border-radius: 0px 0px 5px 5px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -372,7 +401,7 @@ input {
     background-color: #0F66CD;
     font-size: 26px;
     text-align: center;
-}
+} */
 
 
 /* Done */
