--- a/src/public/css/restaurant.css
+++ b/src/public/css/restaurant.css
@@ -300,7 +300,7 @@
 
 /* Reserve */
 .reserve-form {
-    height: 100%;
+    height: 80%;
 }
 .reserve-box {
     height: 70%;
@@ -330,38 +330,21 @@
     width: 100%;
 }
 .reserve-info {
-    margin-top: 40px;
+    margin-top: 30px;
+    padding: 40px;
     height: 40%;
     background-color: #3676C0;
     border-radius: 5px;
     display: flex;
     gap: 0px 40px;
 }
-.reserve-info-list {
-    margin-top: 10px;
-    margin-left: 20px;
-    list-style: none outside;
-}
-.reserve-info-item {
-    display: block;
-    margin-top: 16px;
+.reserve-info-table {
     color: #fff;
     font-size: 20px;
+    width: 70%;
 }
-.reserve-info-item1 {
-    margin-top: 16px;
-    color: #fff;
-    font-size: 20px;
-}
-.reserve-info-item2 {
-    margin-top: 16px;
-    color: #fff;
-    font-size: 20px;
-}
-.reserve-info-item3 {
-    margin-top: 16px;
-    color: #fff;
-    font-size: 20px;
+th {
+    padding: 20px;
 }
 .reserve-btn {
     background-color: #0F66CD;
@@ -388,21 +371,6 @@
 .reserve-btn-txt:hover {
     cursor: pointer;
 }
-/* .reserve-btn {
-    background-color: #0F66CD;
-    height: 10%;
-    border-radius: 0px 0px 5px 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.reserve-btn-txt {
-    color: #fff;
-    background-color: #0F66CD;
-    font-size: 26px;
-    text-align: center;
-} */
-
 
 /* Done */
 .done {
