--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -11,7 +11,7 @@
     width: 100%;
 }
 .maypege-title-container {
-    height: 10%;
+    height: 5%;
 }
 .mypage-title {
     color: #000;
@@ -77,7 +77,7 @@
 }
 .mypage-reserve-table-container {
     margin-top: 20px;
-    height: 70%;
+    height: 50%;
 
 }
 .mypage-info-table {
@@ -123,7 +123,7 @@
     transform: translateY(-3px);
     cursor: pointer;
 }
-/* Rating */
+/* review */
 .mypage-reserve-done-box {
     position: relative;
     margin-left: 20px;
@@ -168,21 +168,144 @@
     position: absolute;
     z-index: 2;
 }
-.mypage-rating-btn {
+.mypage-review-btn {
     margin-top: 20px;
     margin-left: 75%;
-    width: 100px;
+    width: 90px;
     color: #fff;
     font-weight: bold;
+    font-size: 16px;
     background: #272343;
     display: inline-block;
     border: 1px solid #272343;
     border-radius: 5px;
     text-decoration: none;
 }
-.mypage-rating-btn:hover{
+.mypage-review-btn:hover{
     transform: translateY(-3px);
     cursor: pointer;
+}
+/* Modal */
+.modal {
+    display: none;
+    z-index: 101;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.modal-bg {
+    background-color: rgba(255, 255, 255, 0.5);
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+}
+.modal-content {
+    background-color: #fff;
+    left: 50%;
+    top: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    width: 50%;
+}
+/* review */
+.review {
+    margin: 0 auto;
+    width: 100%;
+    height: 60vh;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+}
+.review-bar {
+    position: relative;
+    margin-bottom: 10px;
+    background: #1E90FF;
+    border-radius: 5px 5px 0px 0px;
+    height: 60px;
+}
+.review-box-text {
+    color: #FFFFFF;
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    transform: translate(-50%,-50%);
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+}
+.review-container {
+    position: relative;
+    padding: 10px 40px;
+    height: 60%;
+}
+.review-input-box {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 100%;
+}
+.review-textarea {
+    position: absolute;
+    top: 20%;
+    width: 80%;
+    height: 200px;
+}
+.review-icon {
+    position: absolute;
+    color: #808080;
+    top: 5px;
+	left: 0px;
+	padding: 9px 8px;
+}
+.review-input-box-right {
+    padding-right: 34px;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    text-align: right;
+}
+.review-btn {
+    border: 1px solid #1E90FF;
+    border-radius: 5px;
+    background-color: #1E90FF;
+    color: white;
+    font-size: 16px;
+    width: 80px;
+    height: 35px;
+}
+.review-btn:hover{
+    transform: translateY(-3px);
+    cursor: pointer;
+}
+
+/* Star */
+.rate-form {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+}
+.rate-form input[type=radio] {
+    display: none;
+}
+.rate-form label {
+    position: relative;
+    padding: 0 5px;
+    color: #ccc;
+    cursor: pointer;
+    font-size: 35px;
+}
+.rate-form label:hover {
+    color: #F62;
+    }
+.rate-form label:hover ~ label {
+    color: #F62;
+}
+.rate-form input[type=radio]:checked ~ label {
+    color: #F62;
 }
 
 /* Favorite card */
