add user update func

--- a/src/public/css/management.css
+++ b/src/public/css/management.css
@@ -46,7 +46,7 @@ select.admin-role {
     font-weight: bold;
 }
 
-.material-icons.delete {
+.material-icons.admin-material {
     /* position: relative; */
     /* display: inline-block; */
     /* font-weight: bold; */
