--- a/src/public/css/management.css
+++ b/src/public/css/management.css
@@ -45,20 +45,70 @@ select.admin-role {
     width: 100px;
     font-weight: bold;
 }
-
-.material-icons.admin-material {
-    /* position: relative; */
-    /* display: inline-block; */
-    /* font-weight: bold; */
-    /* padding: 0.25em 0.5em; */
-    text-decoration: none;
-    /* background: #ECECEC; */
-    /* transition: .4s; */
-    background-color: #f5f5f5;
-    color: #666;
-}
-.admin-delete {
+.admin-update-btn {
+    border: 2px solid #87CEFA;
+    border-radius: 20px;
     margin: 0 auto;
-    border: none;
-    background-color: #f5f5f5;
+	font-size: 16px;
+    color: #fff;
+    background-color: #87CEFA;
+    width: 100px;
+    height: 30px;
+    font-weight: bold;
+}
+.admin-delete-btn {
+    border: 2px solid #F62;
+    border-radius: 20px;
+    margin: 0 auto;
+	font-size: 16px;
+    color: #fff;
+    background-color: #F62;
+    width: 100px;
+    height: 30px;
+    font-weight: bold;
+}
+.admin-cancel-btn {
+    border: 2px solid #666;
+    border-radius: 20px;
+    margin: 0 auto;
+	font-size: 16px;
+    color: #fff;
+    background-color: #666;
+    width: 100px;
+    height: 30px;
+    font-weight: bold;
+}
+.admin-update-btn:hover{
+    transform: translateY(-3px);
+    cursor: pointer;
+}
+.admin-delete-btn:hover{
+    transform: translateY(-3px);
+    cursor: pointer;
+}
+.admin-cancel-btn:hover{
+    transform: translateY(-3px);
+    cursor: pointer;
+}
+.admin-modal-container {
+    margin: 0 auto;
+    width: 50%;
+    height: 20vh;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+}
+.admin-modal-txt {
+    color: #666;
+    font-size: 24px;
+    text-align: center;
+    padding-top: 25px;
+}
+.admin-modal-flex {
+    width: 100%;
+    height: 65%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
