--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -258,6 +258,14 @@
     transform: translateY(-3px);
     cursor: pointer;
 }
+.review-modal-content {
+    background-color: #fff;
+    left: 50%;
+    top: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    width: 45%;
+}
 
 /* Star */
 .rate-form {
