--- a/src/public/css/management.css
+++ b/src/public/css/management.css
@@ -247,3 +247,54 @@ select.owner-select-box {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
 }
+/* Edit Modal */
+.owner-modal-thumbnail {
+    margin: 0;
+    order: 0;
+}
+select.owner-modal-select-box {
+    border: 2px solid #666;
+    border-radius: 20px;
+    margin: 20px 0 0 0;
+	font-size: 14px;
+    color: #666;
+    background-color: #fff;
+    width: 150px;
+    font-weight: bold;
+}
+.owner-modal-box {
+    padding: 20px;
+    margin: 0 auto;
+    width: 100%;
+    height: 35vh;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+}
+.owner-modal-container {
+    display: flex;
+    justify-content: space-between;
+}
+.owner-modal-update-btn {
+    display: block;
+    margin: 20px 0 0 auto;
+    border: 2px solid #1E90FF;
+    border-radius: 5px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #1E90FF;
+    width: 100px;
+    font-weight: bold;
+}
+.owner-modal-input-box {
+    position: relative;
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: center;
+}
+.owner-modal-textarea {
+    width: 100%;
+    height: 100px;
+    z-index: 2;
+}
