--- a/src/public/css/management.css
+++ b/src/public/css/management.css
@@ -86,22 +86,41 @@ select.owner-select-box {
     font-weight: bold;
 }
 .owner-input-box {
-    position: relative;
     display: flex;
     margin-top: 20px;
     align-items: center;
     justify-content: center;
 }
 .owner-textarea {
-    position: absolute;
     top: 20%;
     width: 76%;
     height: 100px;
     z-index: 2;
 }
 .owner-btn-flex {
-    height: 200px;
+    height: 40px;
     position: relative;
+}
+.owner-none-btn {
+    display: none;
+}
+.owner-upload-btn {
+    display: inline-block;
+    position: relative;
+    background-color: #666;
+    color: #fff;
+    font-size: 16px;
+    padding: 8px 10px;
+    border-radius: 5px;
+    transition: all 0.5s;
+    width: 180px;
+    top: 60%;
+    left: 136px;
+    position: absolute;
+}
+.owner-upload-btn:hover{
+    transform: translateY(-3px);
+    cursor: pointer;
 }
 .owner-create-btn {
     border: 2px solid #1E90FF;
@@ -110,28 +129,12 @@ select.owner-select-box {
     color: #fff;
     background-color: #1E90FF;
     width: 100px;
-    font-weight: bold;
+    /* font-weight: bold; */
     position: absolute;
     top: 60%;
     left: 80%;
 }
 .owner-create-btn:hover{
-    transform: translateY(-3px);
-    cursor: pointer;
-}
-.owner-upload-btn {
-    border: 2px solid #666;
-    border-radius: 5px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #666;
-    width: 200px;
-    font-weight: bold;
-    position: absolute;
-    top: 60%;
-    left: 12%;
-}
-.owner-upload-btn:hover{
     transform: translateY(-3px);
     cursor: pointer;
 }
@@ -297,4 +300,20 @@ select.owner-modal-select-box {
     width: 100%;
     height: 100px;
     z-index: 2;
+}
+.owner-mmodal-container-btn {
+    display: flex;
+    justify-content: space-between;
+}
+.owner-modal-upload-btn {
+    margin-top: 20px;
+    display: inline-block;
+    position: relative;
+    background-color: #666;
+    color: #fff;
+    font-size: 10px;
+    padding: 8px 10px;
+    border-radius: 5px;
+    transition: all 0.5s;
+    width: 200px;
 }
