--- a/src/public/css/management.css
+++ b/src/public/css/management.css
@@ -350,3 +350,23 @@ select.owner-modal-select-box {
     line-height:2.5em;
     text-align:right;
 }
+.owner-reserve-container {
+    background: #fff;
+}
+.owner-reserve-btn {
+    display: block;
+    border: 2px solid #666;
+    border-radius: 5px;
+    font-size: 16px;
+    color: #666;
+    background-color: #DCDCDC;
+    width: 100px;
+    height: 30px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 25px;
+}
+.owner-reserve-btn:hover{
+    transform: translateY(-3px);
+    cursor: pointer;
+}
